--- a/Views/StudyProgram/StudyProgram.cshtml
+++ b/Views/StudyProgram/StudyProgram.cshtml
@@ -13,7 +13,7 @@
                     @ViewBag.StudyProgram.Description
                 </p>
             </div>
-            <a class="compare-link" href="#"><h4>Compare with other study programs<i class="fas fa-arrow-right"></i></h4></a>
+            <a class="compare-link" href="@Url.RouteUrl("compare")"><h4>Compare with other study programs<i class="fas fa-arrow-right"></i></h4></a>
         </div>
         <div class="col-sm-6">
             <h3>Statistics</h3>
@@ -37,6 +37,7 @@
                     </tr>
                 </tbody>
             </table>
+            <a class="compare-link" href="@Url.RouteUrl("review_page")"><h4>Leave a review<i class="fas fa-arrow-right"></i></h4></a>
         </div>
     </div>
         <div class="row">
