Branch#109 (Added addresses to faculty ,university views) (#83)
* Added Dormitory titles to university view

* Added rating to studyprograms in facultyview

* Added addresses to faculty page

* Removed max-width from location-contaoiner

--- a/Views/Faculty.cshtml
+++ b/Views/Faculty.cshtml
@@ -48,7 +48,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-6">
             <h3>Study programs (@ViewBag.StatsData.StudyProgramCount)</h3>
             <div class="d-flex flex-wrap">
                 @foreach (StudyProgram studyProgram in ViewBag.Faculty.StudyPrograms)
@@ -68,6 +68,17 @@
                                 </p>
                             </div>
                         </div>
+                    </div>
+                }
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <h3>Locations (@ViewBag.StatsData.LocationCount)</h3>
+            <div class="d-flex flex-wrap">
+                @foreach (Address a in ViewBag.Faculty.Addresses)
+                {
+                    <div class="location-container card">
+                        <h4>@a.ToString()</h4>
                     </div>
                 }
             </div>
