Improve styling for study program form.

--- a/Views/Review/Review.cshtml
+++ b/Views/Review/Review.cshtml
@@ -2,8 +2,9 @@
     ViewBag.Title = "Review";
 }
 
-<h2>Leave a review</h2>
-<ul class="nav nav-tabs">
+<h2 class="mt-50">Leave a review</h2>
+<p>Your reviews help fellow students evaluate their future choices.</p>
+<ul class="nav nav-tabs mt-20">
     <li class="active">
         <a href="#studyProgramTab" data-toggle="tab">Study Program</a>
     </li>
