--- a/Views/Review/Partials/_StudyProgramFormPartial.cshtml
+++ b/Views/Review/Partials/_StudyProgramFormPartial.cshtml
@@ -1,90 +1,84 @@
 ﻿@using Advisor.Models
 
-<div class="container">
-    <form>
-        <div class="review-container">
-            <div class="col-sm-6 mt-20">
-                <div class="form-group">
-                    <label for="university">Select university</label>
-                    <select class="form-control" id="university">
-                        <option value="" selected disabled hidden>University</option>
-                        @foreach (University uni in ViewBag.Universities)
-                        {
-                            <option value="@uni.Id">@uni.Title</option>
-                        }
-                    </select>
-                </div>
+<form>
+    <div class="col-md-6 mt-20">
+        <div class="form-group">
+            <label for="university">Select university</label>
+            <select class="form-control m-w-unset" id="university">
+                <option selected disabled hidden>University</option>
+                @foreach (University uni in ViewBag.Universities)
+                {
+                    <option value="@uni.Id">@uni.Title</option>
+                }
+            </select>
+        </div>
 
-                <div class="form-group">
-                    <label class="mt-20" for="program">Select study program</label>
-                    <select class="form-control" id="program">
-                        <option value="" selected disabled hidden>Study program</option>
-                        @for (int i = 0; i < 5; i++)
-                        {
-                            <option value="@ViewBag.StudyPrograms">Study program @i</option>
-                        }
-                    </select>
-                </div>
-            </div>
-            <div class="col-sm-6 mt-20">
-                <div class="form-group">
-                    <label for="stars">Overall rating</label>
-                    <div class="stars">
-                        @for (int i = 0; i < 10; i++)
-                        {
-                            <span onclick="starmark(this)" id="@i+overallStudyProgram" class="fa fa-star "></span>
-                        }
-                    </div>
-                </div>
+        <div class="form-group">
+            <label for="program">Select study program</label>
+            <select class="form-control m-w-unset" id="program">
+                <option selected disabled hidden>Study program</option>
+                @for (int i = 0; i < 5; i++)
+                {
+                    <option value="@ViewBag.StudyPrograms">Study program @i</option>
+                }
+            </select>
+        </div>
 
-                <div class="form-group">
-                    <label for="stars">Difficulty</label>
-                    <div class="stars">
-                        @for (int i = 0; i < 10; i++)
-                        {
-                            <span onclick="starmark(this)" id="@i+difficultyStudyProgram" class="fa fa-star"></span>
-                        }
-                    </div>
-                </div>
+        <div class="form-group">
+            <label for="startyear-select">Which university year did you start your career?</label>
+            <select class="form-control m-w-unset" id="startyear-select">
+                <option selected disabled hidden>Choose year</option>
+                <option value="1">First</option>
+                <option value="2">Second</option>
+                <option value="3">Third</option>
+                <option value="4">Fourth</option>
+            </select>
+        </div>
 
-                <div class=" form-group mt-20">
-                    <label for="stars">Satisfaction level</label>
-                    <div class="stars">
-                        @for (int i = 0; i < 10; i++)
-                        {
-                            <span onclick="starmark(this)" id="@i+satisfactionStudyProgram" class="fa fa-star "></span>
-                        }
-                    </div>
-                </div>
+        <div class="form-group">
+            <label for="salary">Salary</label>
+            <input type="text" class="form-control m-w-unset" id="salary" placeholder="My current salary is...">
+        </div>
 
-                <div class="form-group mt-20">
-                    <input id="relevant" type="checkbox" value="1" />
-                    <label for="relevant">I am working in a relevant industry</label>
-                </div>
-
-                <div class="form-group">
-                    <label class="mt-20" for="startyear-select">Year of first employment</label>
-                    <select class="selectpicker form-control" id="startyear-select">
-                        <option value="" selected disabled hidden>Please select</option>
-                        <option>First</option>
-                        <option>Second</option>
-                        <option>Third</option>
-                        <option>Fourth</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label class="mt-20" for="salary">Salary</label>
-                    <input type="text" class="form-control" id="salary" placeholder="My current salary is...">
-                </div>
-            </div>
-
-            <div class="col-sm-12 mt-20">
-                <!--Review textarea-->
-                <textarea class="review-textarea" id="review-text" placeholder="Enter your review"></textarea>
-                <!--Submit button-->
-                <button type="button" class="btn btn-info sub">Submit</button>
+        <div class="form-group mt-20">
+            <input id="relevant" type="checkbox" value="1" />
+            <label for="relevant">I am working in a relevant industry</label>
+        </div>
+    </div>
+    <div class="col-md-6 mt-20">
+        <div class="form-group">
+            <label for="stars">Overall rating</label>
+            <div class="stars">
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="starmark(this)" id="@i+overallStudyProgram" class="fa fa-star "></span>
+                }
             </div>
         </div>
-    </form>
-</div>
+
+        <div class="form-group">
+            <label for="stars">Difficulty</label>
+            <div class="stars">
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="starmark(this)" id="@i+difficultyStudyProgram" class="fa fa-star"></span>
+                }
+            </div>
+        </div>
+
+        <div class="form-group mt-20">
+            <label for="stars">Satisfaction level</label>
+            <div class="stars">
+                @for (int i = 0; i < 10; i++)
+                {
+                    <span onclick="starmark(this)" id="@i+satisfactionStudyProgram" class="fa fa-star "></span>
+                }
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-12">
+        <textarea class="form-control review-textarea w-100" id="review-text" placeholder="Enter your review..."></textarea>
+        <button type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
+    </div>
+</form>
