--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,9 +30,13 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+    </div>
+    
+    <div class="container body-content">
         <hr />
         @Html.Partial("_FooterPartial")
     </div>
+
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
