--- a/Views/Review/Partials/_StudyProgramFormPartial.cshtml
+++ b/Views/Review/Partials/_StudyProgramFormPartial.cshtml
@@ -1,10 +1,11 @@
 ﻿@using Advisor.Models
+@model Review
 
-<form>
+<form method="post">
     <div class="col-md-6 mt-20">
         <div class="form-group">
             <label for="university">Select university</label>
-            <select class="form-control m-w-unset" id="university">
+            <select name="university" class="form-control m-w-unset" id="university">
                 <option selected disabled hidden>University</option>
                 @foreach (University uni in ViewBag.Universities)
                 {
@@ -15,34 +16,36 @@
 
         <div class="form-group">
             <label for="program">Select study program</label>
-            <select class="form-control m-w-unset" id="program">
+            <select name="program" class="form-control m-w-unset" id="program">
                 <option selected disabled hidden>Study program</option>
-                @for (int i = 0; i < 5; i++)
+                @foreach (StudyProgram program in ViewBag.StudyPrograms)
                 {
-                    <option value="@ViewBag.StudyPrograms">Study program @i</option>
+                    <option value="@program.Id">@program.Title</option>
                 }
             </select>
         </div>
 
         <div class="form-group">
             <label for="startyear-select">Which university year did you start your career?</label>
-            <select class="form-control m-w-unset" id="startyear-select">
-                <option selected disabled hidden>Choose year</option>
-                <option value="1">First</option>
-                <option value="2">Second</option>
-                <option value="3">Third</option>
-                <option value="4">Fourth</option>
-            </select>
+            @Html.DropDownListFor(
+                r => r.CareerStartYear,
+                new SelectList(new int[] { 1, 2, 3, 4 }),
+                "Choose year",
+                new { @class = "form-control m-w-unset" }
+            )
         </div>
 
         <div class="form-group">
             <label for="salary">Salary</label>
-            <input type="text" class="form-control m-w-unset" id="salary" placeholder="My current salary is...">
+            @Html.TextBoxFor(
+                r => r.Salary,
+                new { @type = "number", @class = "form-control m-w-unset", @placeholder = "My current salary is..." }
+            )
         </div>
 
         <div class="form-group mt-20">
-            <input id="relevant" type="checkbox" value="1" />
-            <label for="relevant">I am working in a relevant industry</label>
+            @Html.CheckBoxFor(r => r.RelevantIndustry)
+            <label for="RelevantIndustry">I am working in a relevant industry</label>
         </div>
     </div>
     <div class="col-md-6 mt-20">
@@ -78,7 +81,7 @@
     </div>
 
     <div class="col-md-12">
-        <textarea class="form-control review-textarea w-100" id="review-text" placeholder="Enter your review..."></textarea>
+        @Html.TextArea("Text", new { @class = "form-control review-textarea w-100", @placeholder = "Enter your review... ", @rows = 5 })
         <button type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
     </div>
 </form>
