--- a/Views/Review/Partials/_StudyProgramFormPartial.cshtml
+++ b/Views/Review/Partials/_StudyProgramFormPartial.cshtml
@@ -26,7 +26,7 @@
         </div>
 
         <div class="form-group">
-            <label for="startyear-select">Which university year did you start your career?</label>
+            <label for="startyear-select">During which university year did you start your career?</label>
             @Html.DropDownListFor(
                 r => r.CareerStartYear,
                 new SelectList(new int[] { 1, 2, 3, 4 }),
