--- a/Views/Review/Partials/_StudyProgramFormPartial.cshtml
+++ b/Views/Review/Partials/_StudyProgramFormPartial.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Advisor.Models
 @model Review
 
-<form method="post">
+<form method="post" action="@Url.RouteUrl("review_program")">
     <div class="col-md-6 mt-20">
         <div class="form-group">
             <label for="university">Select university</label>
@@ -81,7 +81,7 @@
     </div>
 
     <div class="col-md-12">
-        @Html.TextArea("Text", new { @class = "form-control review-textarea w-100", @placeholder = "Enter your review... ", @rows = 5 })
-        <button type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
+        @Html.TextArea("Text", new { @class = "form-control review-textarea w-100 m-w-unset", @placeholder = "Enter your review... ", @rows = 5 })
+        <button id="review-submit" type="submit" class="btn btn-primary mt-20 w-100">Submit</button>
     </div>
 </form>
